# encointer-parachain

./: .gitignore  Cargo.toml  Dockerfile  README.md  polkadot-launch-config.json  polkadot-live-config.json  rust-toolchain.toml
.github/: env
.github/workflows/: cargo-check.yml  ci.yml  fmt.yml  publish-docker-release.yml
chopsticks/: asset-hub-kusama.yml  encointer.yml  kusama-asset-hub.yml
client/collator/: Cargo.toml
client/consensus/aura/: Cargo.toml
client/consensus/relay-chain/: Cargo.toml
client/network/: Cargo.toml
client/service/: Cargo.toml
docs/chopsticks-democracy/: README.md
docs/sybil-demo/: README.md
message-broker/: Cargo.toml
node/: Cargo.toml
node/res/: encointer-kusama.json  encointer-westend.json
node/src/: chain_spec.rs  chain_spec_helpers.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/xcm-handler/src/: lib.rs
parachain-system/: Cargo.toml
polkadot-launch/: launch-rococo-local-with-encointer-and-sybil-dummy.json  launch-rococo-local-with-encointer.json  launch-rococo-local-with-launch.json  launch-rococo-local.json  launch-rococo-with-encointer-and-sybil-dummy.json  launch-rococo-with-launch.json  launch-westend-local-with-westmint-local.json  launch-westend-local.json  polkadot-launch-config.json  polkadot-live-config.json
polkadot-parachains/: Cargo.toml
polkadot-parachains/common/: Cargo.toml
polkadot-parachains/common/src/: lib.rs
polkadot-parachains/common/src/weights/: extrinsic_weights.rs  mod.rs  rocksdb_weights.rs
polkadot-parachains/encointer-runtime/: Cargo.toml
polkadot-parachains/encointer-runtime/src/: lib.rs  xcm_config.rs
polkadot-parachains/encointer-runtime/src/weights/: cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_collective.rs  pallet_encointer_balances.rs  pallet_encointer_bazaar.rs  pallet_encointer_ceremonies.rs  pallet_encointer_communities.rs  pallet_encointer_scheduler.rs  pallet_membership.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs
polkadot-parachains/launch-runtime/: Cargo.toml
polkadot-parachains/launch-runtime/src/: lib.rs  xcm_config.rs
polkadot-parachains/launch-runtime/src/weights/: cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_collective.rs  pallet_membership.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs
polkadot-parachains/pallets/parachain-info/: Cargo.toml
polkadot-parachains/pallets/ping/: Cargo.toml
polkadot-parachains/parachains-common/: Cargo.toml
polkadot-parachains/parachains-common/src/: currency.rs
polkadot-parachains/res/: encointer-kusama.json  encointer-rococo.json  encointer-westend.json  launch-kusama.json  launch-rococo.json  launch-westend.json
polkadot-parachains/runtime-common/: Cargo.toml
polkadot-parachains/runtime-common/src/: constants.rs  lib.rs
polkadot-parachains/runtime-common/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
polkadot-parachains/runtimes-common/src/: deal_with_fees.rs
polkadot-parachains/runtimes-common/src/weights/: block_weights.rs
polkadot-parachains/shell-runtime/: Cargo.toml
polkadot-parachains/src/: chain_spec.rs  chain_spec_helpers.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
primitives/parachain-inherent/: Cargo.toml
rococo-parachains/: Cargo.toml
rococo-parachains/pallets/parachain-info/src/: lib.rs
rococo-parachains/runtime/: Cargo.toml
rococo-parachains/runtime/src/: lib.rs
rococo-parachains/src/: chain_spec.rs  command.rs
scripts/: benchmark_encointer_runtime.sh  benchmark_launch_runtime.sh  docker_run_encointer_client_bootstrap_demo_community.sh  dump_essential_balances.sh  dump_wasm_and_state_for_all_chains.sh  dump_wasm_state_and_spec.sh  update_hardcoded_chain_specs.py
test/client/: Cargo.toml
test/relay-sproof-builder/: Cargo.toml
test/runtime/: Cargo.toml
test/runtime-upgrade/: Cargo.toml
test/service/: Cargo.toml
zombienet/: github-actions-setup.toml  init-helper.sh  rococo-local-with-encointer-and-asset-hub.toml  rococo-local-with-encointer.toml
