[workspace]
resolver = "2"
members = [
    "node",
]

[profile.release]
panic = "unwind"

[workspace.dependencies]
assert_cmd = "2.0"
clap = { version = "4.5.3", features = ["derive"] }
color-print = "0.3.4"
docify = { version = "0.2.8" }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
futures = { version = "0.3.28", features = ["compat"] }
jsonrpsee = { version = "0.24.7", features = ["server"] }
log = { version = "0.4.21", default-features = false }
nix = "0.24"
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.127", features = ["arbitrary_precision"] }
tempfile = "3.8.1"

# encointer deps
encointer-balances-tx-payment = { default-features = false, version = "~20.1.0" }
encointer-balances-tx-payment-rpc-runtime-api = { default-features = false, version = "~20.1.0" }
pallet-encointer-bazaar = { default-features = false, version = "~20.1.0" }
pallet-encointer-bazaar-rpc-runtime-api = { default-features = false, version = "~20.1.0" }
pallet-encointer-ceremonies = { default-features = false, version = "~20.1.0" }
pallet-encointer-ceremonies-rpc-runtime-api = { default-features = false, version = "~20.1.0" }
pallet-encointer-communities = { default-features = false, version = "~20.1.0" }
pallet-encointer-communities-rpc-runtime-api = { default-features = false, version = "~20.1.0" }
pallet-encointer-treasuries = { default-features = false, version = "~20.7.0" }
pallet-encointer-treasuries-rpc-runtime-api = { default-features = false, version = "~20.3.0" }
# rpc [std]
pallet-encointer-bazaar-rpc = "~20.1.0"
pallet-encointer-ceremonies-rpc = "~20.1.0"
pallet-encointer-communities-rpc = "~20.1.0"
pallet-encointer-treasuries-rpc = "~20.3.0"
encointer-balances-tx-payment-rpc = "~20.1.0"

# fellowship runtimes. do not depend on fellow-runtimes directly, so we can upgrade at our own pace
parachain-runtime = { package = "encointer-kusama-runtime", git = "https://github.com/encointer/runtimes.git", branch = "main" }

# polkadot-sdk [no_std]
cumulus-primitives-core = { version = "0.20.0", default-features = false }
frame-benchmarking = { version = "42.0.0", default-features = false }
pallet-transaction-payment = { version = "42.0.0", default-features = false }
parachains-common = { version = "24.0.0", default-features = false }
sp-api = { version = "38.0.0", default-features = false }
sp-block-builder = { version = "38.0.0", default-features = false }
sp-consensus-aura = { version = "0.44.0", default-features = false }
sp-core = { version = "38.0.0", default-features = false }
sp-runtime = { version = "43.0.0", default-features = false }
xcm = { version = "18.0.0", package = "staging-xcm", default-features = false }

# std stuff
cumulus-client-bootnodes = "0.4.0"
cumulus-client-cli = "0.25.0"
cumulus-client-collator = "0.25.0"
cumulus-client-consensus-aura = "0.25.0"
cumulus-client-consensus-common = "0.25.0"
cumulus-client-consensus-proposer = "0.21.0"
cumulus-client-service = "0.27.0"
cumulus-relay-chain-interface = "0.25.0"
frame-benchmarking-cli = "50.0.0"
pallet-transaction-payment-rpc = "45.0.0"
polkadot-cli = "27.0.0"
polkadot-service = "27.0.0"
sc-basic-authorship = "0.51.0"
sc-chain-spec = "45.0.0"
sc-cli = "0.54.0"
sc-client-api = "41.0.0"
sc-consensus = "0.51.0"
sc-executor = "0.44.0"
sc-network = "0.52.0"
sc-offchain = "47.0.0"
sc-service = "0.53.0"
sc-sysinfo = "44.0.0"
sc-telemetry = "30.0.0"
sc-tracing = "41.0.0"
sc-transaction-pool = "41.0.0"
sc-transaction-pool-api = "41.0.0"
sp-blockchain = "41.0.0"
sp-consensus = "0.44.0"
sp-keyring = "43.0.0"
sp-keystore = "0.44.0"
sp-timestamp = "38.0.0"
substrate-build-script-utils = "11.0.0"
substrate-frame-rpc-system = "46.0.0"
prometheus-endpoint = { version = "0.17.2", package = "substrate-prometheus-endpoint" }

# ### only while debugging/developping
# [patch."https://github.com/encointer/runtimes"]
# kusama-runtime-constants = { path = "../runtimes/relay/kusama/constants" }
# parachain-runtime = { package = "encointer-kusama-runtime", path = "../runtimes/system-parachains/encointer" }
#
#[patch.crates-io]
#encointer-balances-tx-payment = { path = "../pallets/balances-tx-payment" }
#encointer-balances-tx-payment-rpc = { path = "../pallets/balances-tx-payment/rpc" }
#encointer-balances-tx-payment-rpc-runtime-api = { path = "../pallets/balances-tx-payment/rpc/runtime-api" }
#encointer-ceremonies-assignment = { path = "../pallets/ceremonies/assignment" }
#encointer-primitives = { path = "../pallets/primitives" }
#pallet-encointer-ceremonies = { path = "../pallets/ceremonies" }
#pallet-encointer-ceremonies-rpc = { path = "../pallets/ceremonies/rpc" }
#pallet-encointer-ceremonies-rpc-runtime-api = { path = "../pallets/ceremonies/rpc/runtime-api" }
#pallet-encointer-communities = { path = "../pallets/communities" }
#pallet-encointer-communities-rpc = { path = "../pallets/communities/rpc" }
#pallet-encointer-communities-rpc-runtime-api = { path = "../pallets/communities/rpc/runtime-api" }
#pallet-encointer-balances = { path = "../pallets/balances" }
#pallet-encointer-scheduler = { path = "../pallets/scheduler" }
#pallet-encointer-bazaar = { path = "../pallets/bazaar" }
#pallet-encointer-bazaar-rpc = { path = "../pallets/bazaar/rpc" }
#pallet-encointer-bazaar-rpc-runtime-api = { path = "../pallets/bazaar/rpc/runtime-api" }
#pallet-encointer-faucet = { path = "../pallets/faucet" }
#pallet-encointer-reputation-commitments = { path = "../pallets/reputation-commitments" }
