[package]
name = "encointer-collator"
# align major.minor revision with the polkadot-sdk release. bump patch revision ad lib. make this the github release tag
version = "1.7.4"
authors = ["Encointer <info@encointer.org>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "encointer-collator"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true }
serde = { workspace = true, features = ["std"] }

# added by encointer
parachains-common = { workspace = true, features = ["std"] }
serde_json = { workspace = true }

# Parachain runtimes
parachain-runtime = { workspace = true, features = ["std"] }

# encointer dependencies
encointer-balances-tx-payment-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-encointer-bazaar-rpc = { workspace = true }
pallet-encointer-bazaar-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-encointer-ceremonies-rpc = { workspace = true }
pallet-encointer-ceremonies-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-encointer-communities-rpc = { workspace = true }
pallet-encointer-communities-rpc-runtime-api = { workspace = true, features = ["std"] }

# Substrate dependencies
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true, features = ["std"] }
sp-offchain = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true }
sp-session = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
sp-transaction-pool = { workspace = true, features = ["std"] }
substrate-prometheus-endpoint = { workspace = true }

# RPC related dependencies
frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }

# Polkadot dependencies
polkadot-cli = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
xcm = { workspace = true, features = ["std"] }

# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-consensus-relay-chain = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
nix = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
runtime-benchmarks = [
    'polkadot-service/runtime-benchmarks',
    'parachain-runtime/runtime-benchmarks',
]
try-runtime = ["parachain-runtime/try-runtime"]
