[package]
name = 'encointer-collator'
version = '0.5.1'
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = 'encointer-collator'
path = 'src/main.rs'

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.13"
parking_lot = "0.10.2"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "2.1.1" }
structopt = "0.3.3"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.64"
hex-literal = "0.2.1"
async-trait = "0.1.42"

# Parachain dependencies
parachain-runtime = { package = "encointer-parachain-runtime", path = "encointer-runtime" }
launch-runtime = { package = "encointer-launch-runtime", path = "launch-runtime" }

# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.12" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

# RPC related dependencies
jsonrpc-core = "15.1.0"

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"
tempfile = "3.2.0"
tokio = { version = "0.2.13", features = ["macros"] }

[features]
default = []
runtime-benchmarks = [
	'polkadot-service/runtime-benchmarks',
]
