[package]
name = "encointer-collator"
# align major.minor revision with the runtimes. bump patch revision ad lib. make this the github release tag
version = "1.5.1"
authors = ["Encointer <info@encointer.org>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "encointer-collator"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.71"
clap = { version = "4.3.11", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = { version = "0.3.28", features = ["compat"] }
hex-literal = "0.4.1"
jsonrpsee = { version = "0.16.3", features = ["server"] }
log = "0.4.19"
serde = { version = "1.0.167", features = ["derive"] }

# added by encointer
parachains-common = "3.0.0"
serde_json = "1.0.100"

# Parachain runtimes
launch-runtime = { package = "launch-runtime", path = "launch-runtime" }
parachain-runtime = { package = "encointer-runtime", path = "encointer-runtime" }

# encointer dependencies
encointer-balances-tx-payment-rpc-runtime-api = "2.0.0"
pallet-encointer-bazaar-rpc = "2.0.0"
pallet-encointer-bazaar-rpc-runtime-api = "2.0.0"
pallet-encointer-ceremonies-rpc = "2.0.0"
pallet-encointer-ceremonies-rpc-runtime-api = "2.0.0"
pallet-encointer-communities-rpc = "2.0.0"
pallet-encointer-communities-rpc-runtime-api = "2.0.0"

# Substrate dependencies
frame-benchmarking = "24.0.0"
frame-benchmarking-cli = "28.0.0"
sc-basic-authorship = "0.30.0"
sc-chain-spec = "23.0.0"
sc-cli = "0.32.0"
sc-client-api = "24.0.0"
sc-consensus = "0.29.0"
sc-executor = "0.28.0"
sc-network = "0.30.0"
sc-network-common = "0.29.0"
sc-network-sync = "0.29.0"
sc-rpc = "25.0.0"
sc-service = "0.31.0"
sc-sysinfo = "23.0.0"
sc-telemetry = "11.0.0"
sc-tracing = "24.0.0"
sc-transaction-pool = "24.0.0"
sp-api = "22.0.0"
sp-block-builder ="22.0.0"
sp-blockchain = "24.0.0"
sp-consensus = "0.28.0"
sp-consensus-aura = "0.28.0"
sp-core = "24.0.0"
sp-inherents = "22.0.0"
sp-io = "26.0.0"
sp-keyring = "27.0.0"
sp-keystore = "0.30.0"
sp-offchain = "22.0.0"
sp-runtime = { default-features = false, version = "27.0.0" }
#sp-serializer =
sp-session = "23.0.0"
sp-timestamp = "22.0.0"
sp-transaction-pool = "22.0.0"
substrate-prometheus-endpoint = "0.15.0"
try-runtime-cli = { optional = true, version = "0.34.0" }

# RPC related dependencies
frame-rpc-system = { package = "substrate-frame-rpc-system", version = "24.0.0" }
pallet-transaction-payment-rpc = "26.0.0"
sc-transaction-pool-api = "24.0.0"

# Polkadot dependencies
polkadot-cli = "3.0.0"
polkadot-parachain-primitives = "2.0.0"
polkadot-primitives = "3.0.0"
polkadot-service = "3.0.0"
xcm = { package = "staging-xcm", default-features = false, version = "3.0.0" }

# Cumulus
cumulus-client-cli = "0.3.0"
cumulus-client-collator = "0.3.0"
cumulus-client-consensus-aura = "0.3.0"
cumulus-client-consensus-common = "0.3.0"
cumulus-client-consensus-proposer = "0.3.0"
cumulus-client-consensus-relay-chain = "0.3.0"
cumulus-client-network = "0.3.0"
cumulus-client-service = "0.3.0"
cumulus-primitives-core = "0.3.0"
cumulus-primitives-parachain-inherent = "0.3.0"
cumulus-relay-chain-inprocess-interface = "0.3.0"
cumulus-relay-chain-interface = "0.3.0"
cumulus-relay-chain-rpc-interface = "0.3.0"

[build-dependencies]
substrate-build-script-utils = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0"
nix = "0.24"
tempfile = "3.3.0"

[features]
default = []
runtime-benchmarks = [
    'polkadot-service/runtime-benchmarks',
    'launch-runtime/runtime-benchmarks',
    'parachain-runtime/runtime-benchmarks',
]
try-runtime = ["parachain-runtime/try-runtime", "try-runtime-cli/try-runtime"]
